fix registration and user dashboard and user modal'

--- a/app/src/app/admin/status-card/status-card.component.scss
+++ b/app/src/app/admin/status-card/status-card.component.scss
@@ -5,7 +5,7 @@
     align-items: center;
     height: 6rem;
     overflow: visible;
-
+    cursor: pointer;
     .icon-container {
       height: 100%;
       padding: 0.625rem;
