--- a/app/src/app/admin/dashboard/dashboard.component.html
+++ b/app/src/app/admin/dashboard/dashboard.component.html
@@ -39,7 +39,12 @@
 
 <div class="row">
   <div class="col-xxxl-3 col-md-6" *ngFor="let statusCard of statusCards">
-    <ngx-status-card [title]="statusCard.title" [type]="statusCard.type">
+    <ngx-status-card
+      [routerLink]="statusCards.link"
+      [title]="statusCard.title"
+      [type]="statusCard.type"
+      [on]="statusCard.on"
+    >
       <i [ngClass]="statusCard.iconClass"></i>
     </ngx-status-card>
   </div>
