--- a/app/src/app/@theme/components/header/header.component.html
+++ b/app/src/app/@theme/components/header/header.component.html
@@ -24,7 +24,7 @@
 </div>
 
 <div class="header-container">
-  <nb-select
+  <!-- <nb-select
     [selected]="currentTheme"
     (selectedChange)="changeTheme($event)"
     status="primary"
@@ -33,7 +33,22 @@
     <nb-option *ngFor="let theme of themes" [value]="theme.value">
       {{ theme.name }}</nb-option
     >
-  </nb-select>
+  </nb-select> -->
+
+  <div style="padding-top: 6%">
+    <input
+      type="checkbox"
+      class="checkbox"
+      id="toggleBtn"
+      (change)="changeTheme($event.target.checked ? 'dark' : 'default')"
+    />
+    <label class="switch" for="toggleBtn">
+      <i class="fas fa-moon"></i>
+      <i class="fas fa-sun"></i>
+      <div class="ball"></div>
+    </label>
+  </div>
+
   <nb-actions size="small">
     <nb-action class="user-action" *nbIsGranted="['view', 'user']" matRipple>
       <nb-user
@@ -48,3 +63,76 @@
     </nb-action>
   </nb-actions>
 </div>
+
+<!--
+
+  current theme
+
+  <nb-select
+    [selected]="currentTheme"
+    (selectedChange)="changeTheme($event)"
+    status="primary"
+    size="small"
+  >
+    <nb-option *ngFor="let theme of themes" [value]="theme.value">
+      {{ theme.name }}</nb-option
+    >
+  </nb-select>
+
+  new implemenetation
+
+ <div>
+          <input type="checkbox" class="checkbox" id="toggleBtn" />
+          <label class="switch" for="toggleBtn">
+            <i class="fas fa-moon"></i>
+            <i class="fas fa-sun"></i>
+            <div class="ball"></div>
+          </label>
+        </div>
+
+
+
+        .checkbox {
+  display: none;
+}
+
+.switch {
+  background-color: #111;
+  border-radius: 50px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px;
+  position: relative;
+  height: 26px;
+  width: 50px;
+  /* Scale the size to your need */
+  transform: scale(0.7);
+}
+
+.switch .ball {
+  background-color: #fff;
+  border-radius: 50%;
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  height: 22px;
+  width: 22px;
+  transform: translateX(0px);
+  transition: transform 0.2s linear;
+}
+
+.checkbox:checked + .switch .ball {
+  transform: translateX(24px);
+}
+
+.fa-moon {
+  color: #f1c40f;
+}
+
+.fa-sun {
+  color: #f39c12;
+}
+
+ -->
