--- a/app/src/app/@theme/components/header/header.component.scss
+++ b/app/src/app/@theme/components/header/header.component.scss
@@ -71,4 +71,47 @@
       display: none;
     }
   }
+
+  .checkbox {
+    display: none;
+  }
+
+  .switch {
+    background-color: #111;
+    border-radius: 50px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px;
+    position: relative;
+    height: 26px;
+    width: 50px;
+    /* Scale the size to your need */
+    transform: scale(0.7);
+  }
+
+  .switch .ball {
+    background-color: #fff;
+    border-radius: 50%;
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    height: 22px;
+    width: 22px;
+    transform: translateX(0px);
+    transition: transform 0.2s linear;
+  }
+
+  .checkbox:checked + .switch .ball {
+    transform: translateX(24px);
+  }
+
+  .fa-moon {
+    color: #f1c40f;
+  }
+
+  .fa-sun {
+    color: #f39c12;
+  }
 }
