--- a/app/src/app/login/login.component.html
+++ b/app/src/app/login/login.component.html
@@ -70,6 +70,7 @@
             />
 
             <input
+              style="display: none"
               class="btn btn-danger register"
               value="Register"
               (click)="register()"
