--- a/app/src/app/admin/users/users.component.scss
+++ b/app/src/app/admin/users/users.component.scss
@@ -1,3 +1,12 @@
+@import "~@nebular/theme/styles/theming";
+@import "~@nebular/theme/styles/themes";
+
+@include nb-install-component() {
+  .table.mat-table.cdk-table.mat-elevation-z8 {
+    background: nb-theme(color-bg);
+  }
+}
+
 span.input-group-text {
   background-color: #00d68f;
   color: #fff;
@@ -106,6 +115,13 @@ i#button-alignment {
   padding: 4px;
   margin: 0px;
 }
+.pending {
+  background: #ff8d00c4;
+  color: white;
+  border-radius: 4px;
+  padding: 4px;
+  margin: 0px;
+}
 .medium {
   background: #0066ffc4;
   color: white;
@@ -164,4 +180,14 @@ i#button-alignment {
   font-size: 20px !important;
   cursor: pointer;
   color: #3366ff;
+}
+
+/* Structure */
+table {
+  width: 100%;
+}
+
+.mat-form-field {
+  font-size: 14px;
+  width: 100%;
 }
