--- a/app/src/app/shared/department-modal/department.component.scss
+++ b/app/src/app/shared/department-modal/department.component.scss
@@ -1,5 +1,25 @@
+.col-lg-12 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100px;
+}
+
+::ng-deep .nb-theme-dark nb-card {
+  margin-bottom: 0px !important;
+}
+::ng-deep .nb-theme-cosmic nb-card {
+  margin-bottom: 0px !important;
+}
+
 @import "~@nebular/theme/styles/theming";
 @import "~@nebular/theme/styles/themes";
+
+@include nb-install-component() {
+  .table.mat-table.cdk-table.mat-elevation-z8 {
+    background: nb-theme(color-bg);
+  }
+}
 
 span.input-group-text {
   background-color: #00d68f;
