--- a/app/src/app/shared/users-modal/users-modal.component.html
+++ b/app/src/app/shared/users-modal/users-modal.component.html
@@ -68,39 +68,18 @@
         </div>
         <div class="col-sm-12">
           <div class="form-group" style="display: grid">
-            <!-- <nb-card>
-              <nb-card-header>Select</nb-card-header>
-              <nb-card-body>
-                <nb-select selected="1">
-                  <nb-option value="1">Option 1</nb-option>
-                  <nb-option value="2">Option 2</nb-option>
-                </nb-select>
-              </nb-card-body>
-            </nb-card>
-
-
-          <select (change)="updateSorting($event)">
-  <option disabled selected>Sorting</option>
-  <option value="pointDes">pointDes</option>
-  <option value="timeDes">timeDes</option>
-  <option value="timeAsc">timeAsc</option>
-  <option value="pointAsc">pointAsc</option>
-</select>
-
-
-
-          -->
-
             <label class="label" for="Select">Choose Dept.</label>
             <nb-select
               formControlName="department"
               (ngModelChange)="editDept($event)"
               selected="0"
             >
-              <nb-option disabled label="0">--</nb-option>
-              <nb-option value="pointDes"> --Manage Dept.-- </nb-option>
-              <nb-option value="timeDes">Option 1</nb-option>
-              <nb-option value="pointAsc">Option 2</nb-option>
+              <nb-option value="editDept" style="color: greenyellow">
+                --Manage/Edit Dept. Names--
+              </nb-option>
+              <nb-option *ngFor="let dept of department" [value]="dept.id">{{
+                dept.department | titlecase
+              }}</nb-option>
             </nb-select>
           </div>
         </div>
