--- a/app/src/app/shared/add-document-modal/add-document.component.html
+++ b/app/src/app/shared/add-document-modal/add-document.component.html
@@ -1,5 +1,5 @@
 <nb-card>
-  <nb-card-header> {{ action | titlecase }} User </nb-card-header>
+  <nb-card-header> {{ action | titlecase }} Department </nb-card-header>
   <nb-card-body>
     <form [formGroup]="form" (submit)="executeAction(form)">
       <div class="row">
