--- a/app/src/app/admin/research/research.component.html
+++ b/app/src/app/admin/research/research.component.html
@@ -1,1 +1,11 @@
-<p>research works!</p>
+<div class="maintenance-wrap">
+  <div class="maintenance-anim"></div>
+  <section class="maintenance-content">
+    <h1>Pardon our dust.</h1>
+    <p>The website is currently under construction...</p>
+    <footer>
+      If you need to you can always
+      <a href="mailto:mark.meguizo@chmsu.edu.ph">contact us</a>.
+    </footer>
+  </section>
+</div>
