--- a/app/src/app/admin/objectives/objectives.component.html
+++ b/app/src/app/admin/objectives/objectives.component.html
@@ -46,7 +46,13 @@
               <ng-container matColumnDef="goals">
                 <th mat-header-cell *matHeaderCellDef>Goals</th>
                 <td mat-cell *matCellDef="let data">
-                  {{ data.goals | titlecase }}
+                  <span
+                    (click)="objectivesModal(data.id)"
+                    id="goalName"
+                    style="text-decoration: none; font-size: 16px"
+                  >
+                    {{ data.goals | titlecase }}
+                  </span>
                 </td>
               </ng-container>
               <!-- Weight Column -->
