--- a/app/src/app/shared/update-profile/update-profile.component.html
+++ b/app/src/app/shared/update-profile/update-profile.component.html
@@ -10,7 +10,6 @@
               type="text"
               nbInput
               fullWidth
-              id="username"
               [status]="
                 form?.get('username').touched &&
                 form.controls['username'].errors?.required
@@ -29,7 +28,6 @@
               type="email"
               nbInput
               fullWidth
-              id="email"
               [status]="
                 form?.get('email').touched &&
                 form.controls['email'].errors?.required
@@ -50,7 +48,6 @@
               type="{{ showpassword ? 'text' : 'password' }}"
               nbInput
               fullWidth
-              id="password"
               [status]="
                 form?.get('password').touched &&
                 form.controls['password'].errors?.required
@@ -59,6 +56,7 @@
               "
               placeholder="Password"
               formControlName="password"
+              autocomplete="new-password"
             />
             <nb-icon
               class="password-icon"
@@ -75,7 +73,6 @@
               type="{{ showpassword ? 'text' : 'password' }}"
               nbInput
               fullWidth
-              id="confirm"
               [status]="
                 form?.get('confirm').touched &&
                 form.controls['confirm'].errors?.required
